macos/Classes/trtc_c_api/trtc_cloud_type.h

typedef struct {
  int left;
  int top;
  int right;
  int bottom;
} trtc_rect_t;
typedef struct {
  int64_t width;
  int64_t height;
} trtc_size_t;
// 5.1
typedef struct {
  uint32_t sdk_app_id;
  const char* user_id;
  const char* user_sig;
  uint32_t room_id;
  const char* str_room_id;
  int role;  // 2.2 TRTCRoleType
  const char* stream_id;
  const char* user_define_record_id;
  const char* private_map_key;
  const char* business_info;
} trtc_params_t;
// 5.2
typedef struct {
  int video_resolution;  // 1.1 TRTCVideoResolution
  int res_mode;          // 1.2 TRTCVideoResolutionMode
  uint32_t video_fps;
  uint32_t video_bitrate;
  uint32_t min_video_bitrate;
  int enable_adjust_res;  // bool -> int
} trtc_video_enc_param_t;
// 5.3
typedef struct {
  int preference;    // 2.4 TRTCVideoQosPreference
  int control_mode;  // 2.3 TRTCQosControlMode（已废弃）
} trtc_network_qos_param_t;
// 5.4
typedef struct {
  int rotation;
  int fill_mode;    // 1.4 TRTCVideoFillMode
  int mirror_type;  // 1.9 TRTCVideoMirrorType
} trtc_render_params_t;
// 5.7
typedef struct {
  int sdk_app_id;
  const char* user_id;
  const char* user_sig;
  int expected_up_bandwidth;
  int expected_down_bandwidth;
  int scene;  // 4.14 TRTCSpeedTestScene
} trtc_speed_test_params_t;
// 5.9
typedef struct {
  int gl_texture_id;
  void* gl_context;
} trtc_texture_t;
// 5.10
typedef struct {
  int video_format;  // 1.7 TRTCVideoPixelFormat
  int buffer_type;   // 1.8 TRTCVideoBufferType
  trtc_texture_t* texture;
  char* data;
  uint32_t length;
  uint32_t width;
  uint32_t height;
  uint64_t timestamp;
  int rotation;  // 1.5 TRTCVideoRotation
} trtc_video_frame_t;
typedef struct {
  int audio_format;  // 3.7 TRTCAudioFrameFormat
  char* data;
  uint32_t length;
  uint32_t sample_rate;
  uint32_t channel;
  uint64_t timestamp;
  char* extra_data;
  uint32_t extra_data_length;
} trtc_audio_frame_t;
// 5.12
typedef struct {
  const char* user_id;
  const char* room_id;
  trtc_rect_t rect;
  int z_order;
  int stream_type;  // 1.3 TRTCVideoStreamType
  int pure_audio;   // bool -> int
  int input_type;   // 4.6 TRTCMixInputType
  uint32_t render_mode;
  uint32_t sound_level;
  const char* image;
} trtc_mix_user_t;
// 5.13
typedef struct {
  int mode;  // 4.4 TRTCTranscodingConfigMode
  uint32_t app_id;
  uint32_t biz_id;
  uint32_t video_width;
  uint32_t video_height;
  uint32_t video_bitrate;
  uint32_t video_framerate;
  uint32_t video_gop;
  uint32_t background_color;
  const char* background_image;
  uint32_t audio_sample_rate;
  uint32_t audio_bitrate;
  uint32_t audio_channels;
  uint32_t audio_codec;
  trtc_mix_user_t* mix_users_array;
  uint32_t mix_users_array_size;
  const char* stream_id;
  const char* video_sei_params;
} trtc_transcoding_config_t;
// 5.14
typedef struct {
  uint32_t app_id;
  uint32_t biz_id;
  const char* url;
  const char* stream_id;
} trtc_publish_cdn_param_t;
// 5.16
typedef struct {
  const char* file_path;
  int record_type;  // 4.5 TRTCLocalRecordType
  int interval;
  int max_duration_per_file;
} trtc_local_recording_params_t;