lib/bindings/trtc/trtc_cloud_struct.dart

// ignore_for_file: camel_case_types
// ignore_for_file: constant_identifier_names
// ignore_for_file: non_constant_identifier_names
import 'dart:ffi' as ffi;

import 'package:ffi/ffi.dart';
import 'package:tencent_rtc_sdk/trtc_cloud_def.dart';

class trtc_rect_t extends ffi.Struct {
  @ffi.Int()
  external int left;

  @ffi.Int()
  external int top;

  @ffi.Int()
  external int right;

  @ffi.Int()
  external int bottom;

  static ffi.Pointer<trtc_rect_t> fromParams(TRTCRect param) {
    final rect = calloc<trtc_rect_t>();
    rect.ref
      ..left = param.left
      ..top = param.top
      ..right = param.right
      ..bottom = param.bottom;
    return rect;
  }

  static freeStruct(ffi.Pointer<trtc_rect_t> pointer) {
    calloc.free(pointer);
  }
}

class trtc_size_t extends ffi.Struct {
  @ffi.Int64()
  external int width;

  @ffi.Int64()
  external int height;

  static ffi.Pointer<trtc_size_t> fromParams(TRTCSize param) {
    final size = calloc<trtc_size_t>();
    size.ref
      ..width = param.width
      ..height = param.height;
    return size;
  }

  static freeStruct(ffi.Pointer<trtc_size_t> pointer) {
    calloc.free(pointer);
  }
}

// 5.1
class trtc_params_t extends ffi.Struct {
  @ffi.Uint32()
  external int sdk_app_id;

  external ffi.Pointer<ffi.Char> user_id;

  external ffi.Pointer<ffi.Char> user_sig;

  @ffi.Uint32()
  external int room_id;

  external ffi.Pointer<ffi.Char> str_room_id;

  // 2.2 TRTCRoleType
  @ffi.Int()
  external int role;

  external ffi.Pointer<ffi.Char> stream_id;

  external ffi.Pointer<ffi.Char> user_define_record_id;

  external ffi.Pointer<ffi.Char> private_map_key;

  external ffi.Pointer<ffi.Char> business_info;

  static ffi.Pointer<trtc_params_t> fromParams(TRTCParams param) {
    final params = calloc<trtc_params_t>();
    params.ref
      ..sdk_app_id = param.sdkAppId
      ..user_id = param.userId.toNativeUtf8().cast<ffi.Char>()
      ..user_sig = param.userSig.toNativeUtf8().cast<ffi.Char>()
      ..room_id = param.roomId
      ..str_room_id = param.strRoomId.toNativeUtf8().cast<ffi.Char>()
      ..role = param.role.value()
      ..stream_id = param.streamId.toNativeUtf8().cast<ffi.Char>()
      ..user_define_record_id =
          param.userDefineRecordId.toNativeUtf8().cast<ffi.Char>()
      ..private_map_key = param.privateMapKey.toNativeUtf8().cast<ffi.Char>()
      ..business_info = param.businessInfo.toNativeUtf8().cast<ffi.Char>();
    return params;
  }

  static freeStruct(ffi.Pointer<trtc_params_t> pointer) {
    calloc.free(pointer.ref.user_id);
    calloc.free(pointer.ref.user_sig);
    calloc.free(pointer.ref.str_room_id);
    calloc.free(pointer.ref.stream_id);
    calloc.free(pointer.ref.user_define_record_id);
    calloc.free(pointer.ref.private_map_key);
    calloc.free(pointer.ref.business_info);

    calloc.free(pointer);
  }
}

// 5.2
class trtc_video_enc_param_t extends ffi.Struct {
  // 1.1 TRTCVideoResolution
  @ffi.Int()
  external int video_resolution;

  // 1.2 TRTCVideoResolutionMode
  @ffi.Int()
  external int res_mode;

  @ffi.Uint32()
  external int video_fps;

  @ffi.Uint32()
  external int video_bitrate;

  @ffi.Uint32()
  external int min_video_bitrate;

  // bool -> int
  @ffi.Int()
  external int enable_adjust_res;

  static ffi.Pointer<trtc_video_enc_param_t> fromParams(
      TRTCVideoEncParam param) {
    final params = calloc<trtc_video_enc_param_t>();
    params.ref
      ..video_resolution = param.videoResolution.value()
      ..res_mode = param.videoResolutionMode.value()
      ..video_fps = param.videoFps
      ..video_bitrate = param.videoBitrate
      ..min_video_bitrate = param.minVideoBitrate
      ..enable_adjust_res = param.enableAdjustRes ? 1 : 0;
    return params;
  }

  static freeStruct(ffi.Pointer<trtc_video_enc_param_t> pointer) {
    calloc.free(pointer);
  }
}

// 5.3
class trtc_network_qos_param_t extends ffi.Struct {
  // 2.4 TRTCVideoQosPreference
  @ffi.Int()
  external int preference;

  // 2.3 TRTCQosControlMode
  @ffi.Int()
  external int control_mode;

  static ffi.Pointer<trtc_network_qos_param_t> fromParams(
      TRTCNetworkQosParam param) {
    final params = calloc<trtc_network_qos_param_t>();
    params.ref
      ..preference = param.preference.value()
      ..control_mode = 1;
    return params;
  }

  static freeStruct(ffi.Pointer<trtc_network_qos_param_t> pointer) {
    calloc.free(pointer);
  }
}

// 5.4
class trtc_render_params_t extends ffi.Struct {
  @ffi.Int()
  external int rotation;

  // 1.4 TRTCVideoFillMode
  @ffi.Int()
  external int fill_mode;

  // 1.9 TRTCVideoMirrorType
  @ffi.Int()
  external int mirror_type;

  static ffi.Pointer<trtc_render_params_t> fromParams(TRTCRenderParams param) {
    final params = calloc<trtc_render_params_t>();
    params.ref
      ..rotation = param.rotation.value()
      ..fill_mode = param.fillMode.value()
      ..mirror_type = param.mirrorType.value();
    return params;
  }

  static freeStruct(ffi.Pointer<trtc_render_params_t> pointer) {
    calloc.free(pointer);
  }
}

// 5.7
class trtc_speed_test_params_t extends ffi.Struct {
  @ffi.Int()
  external int sdk_app_id;

  external ffi.Pointer<ffi.Char> user_id;

  external ffi.Pointer<ffi.Char> user_sig;

  @ffi.Int()
  external int expected_up_bandwidth;

  @ffi.Int()
  external int expected_down_bandwidth;

  // 4.14 TRTCSpeedTestScene
  @ffi.Int()
  external int scene;

  static ffi.Pointer<trtc_speed_test_params_t> fromParams(
      TRTCSpeedTestParams param) {
    final params = calloc<trtc_speed_test_params_t>();
    params.ref
      ..sdk_app_id = param.sdkAppId
      ..user_id = param.userId.toNativeUtf8().cast<ffi.Char>()
      ..user_sig = param.userSig.toNativeUtf8().cast<ffi.Char>()
      ..expected_up_bandwidth = param.expectedUpBandwidth
      ..expected_down_bandwidth = param.expectedDownBandwidth
      ..scene = param.scene.value();
    return params;
  }

  static freeStruct(ffi.Pointer<trtc_speed_test_params_t> pointer) {
    calloc.free(pointer.ref.user_id);
    calloc.free(pointer.ref.user_sig);

    calloc.free(pointer);
  }
}

// 5.9
class trtc_texture_t extends ffi.Struct {
  @ffi.Int()
  external int gl_texture_id;

  external ffi.Pointer<ffi.Void> gl_context;

  static ffi.Pointer<trtc_texture_t> fromParams(TRTCTexture param) {
    final texture = calloc<trtc_texture_t>();
    texture.ref
      ..gl_texture_id = param.glTextureId
      ..gl_context = ffi.Pointer<ffi.Void>.fromAddress(param.glContext);
    return texture;
  }

  static freeStruct(ffi.Pointer<trtc_texture_t> pointer) {
    calloc.free(pointer);
  }
}

// 5.10
class trtc_video_frame_t extends ffi.Struct {
  // 1.7 TRTCVideoPixelFormat
  @ffi.Int()
  external int video_format;

  // 1.8 TRTCVideoBufferType
  @ffi.Int()
  external int buffer_type;

  external ffi.Pointer<trtc_texture_t> texture;

  external ffi.Pointer<ffi.Char> data;

  @ffi.Uint32()
  external int length;

  @ffi.Uint32()
  external int width;

  @ffi.Uint32()
  external int height;

  @ffi.Uint64()
  external int timestamp;

  // 1.5 TRTCVideoRotation
  @ffi.Int()
  external int rotation;

  static ffi.Pointer<trtc_video_frame_t> fromParams(TRTCVideoFrame param) {
    final frame = calloc<trtc_video_frame_t>();

    ffi.Pointer<ffi.Char> dataPointer = ffi.nullptr;
    if (param.data.isNotEmpty) {
      dataPointer = calloc<ffi.Uint8>(param.data.length).cast<ffi.Char>();
      final nativeData = dataPointer.cast<ffi.Uint8>();
      for (int i = 0; i < param.data.length; i++) {
        nativeData[i] = param.data[i];
      }
    }

    frame.ref
      ..video_format = param.videoFormat.value()
      ..buffer_type = param.bufferType.value()
      ..texture = param.texture != null
          ? trtc_texture_t.fromParams(param.texture!)
          : ffi.nullptr
      ..data = dataPointer
      ..length = param.length
      ..width = param.width
      ..height = param.height
      ..timestamp = param.timestamp
      ..rotation = param.rotation.value();
    return frame;
  }

  static freeStruct(ffi.Pointer<trtc_video_frame_t> pointer) {
    if (pointer.ref.texture != ffi.nullptr) {
      calloc.free(pointer.ref.texture);
    }
    if (pointer.ref.data != ffi.nullptr) {
      calloc.free(pointer.ref.data);
    }

    calloc.free(pointer);
  }
}

class trtc_audio_frame_t extends ffi.Struct {
  // 3.7 TRTCAudioFrameFormat
  @ffi.Int()
  external int audio_format;

  external ffi.Pointer<ffi.Char> data;

  @ffi.Uint32()
  external int length;

  @ffi.Uint32()
  external int sample_rate;

  @ffi.Uint32()
  external int channel;

  @ffi.Uint64()
  external int timestamp;

  external ffi.Pointer<ffi.Char> extra_data;

  @ffi.Uint32()
  external int extra_data_length;

  static ffi.Pointer<trtc_audio_frame_t> fromParams(TRTCAudioFrame param) {
    final frame = calloc<trtc_audio_frame_t>();

    ffi.Pointer<ffi.Char> dataPointer = ffi.nullptr;
    if (param.data.isNotEmpty) {
      dataPointer = calloc<ffi.Uint8>(param.data.length).cast<ffi.Char>();
      final nativeData = dataPointer.cast<ffi.Uint8>();
      for (int i = 0; i < param.data.length; i++) {
        nativeData[i] = param.data[i];
      }
    }

    ffi.Pointer<ffi.Char> extraDataPointer = ffi.nullptr;
    if (param.extraData.isNotEmpty) {
      extraDataPointer =
          calloc<ffi.Uint8>(param.extraData.length).cast<ffi.Char>();
      final nativeExtraData = extraDataPointer.cast<ffi.Uint8>();
      for (int i = 0; i < param.extraData.length; i++) {
        nativeExtraData[i] = param.extraData[i];
      }
    }

    frame.ref
      ..audio_format = param.audioFormat.value()
      ..data = dataPointer
      ..length = param.length
      ..sample_rate = param.sampleRate
      ..channel = param.channel
      ..timestamp = param.timestamp
      ..extra_data = extraDataPointer
      ..extra_data_length = param.extraDataLength;
    return frame;
  }

  static freeStruct(ffi.Pointer<trtc_audio_frame_t> pointer) {
    if (pointer.ref.data != ffi.nullptr) {
      calloc.free(pointer.ref.data);
    }
    if (pointer.ref.extra_data != ffi.nullptr) {
      calloc.free(pointer.ref.extra_data);
    }

    calloc.free(pointer);
  }
}

// 5.12
class trtc_mix_user_t extends ffi.Struct {
  external ffi.Pointer<ffi.Char> user_id;

  external ffi.Pointer<ffi.Char> room_id;

  external trtc_rect_t rect;

  @ffi.Int()
  external int z_order;

  // 1.3 TRTCVideoStreamType
  @ffi.Int()
  external int stream_type;

  // bool -> int
  @ffi.Int()
  external int pure_audio;

  // 4.6 TRTCMixInputType
  @ffi.Int()
  external int input_type;

  @ffi.Uint32()
  external int render_mode;

  @ffi.Uint32()
  external int sound_level;

  external ffi.Pointer<ffi.Char> image;
}

// 5.13
class trtc_transcoding_config_t extends ffi.Struct {
  // 4.4 TRTCTranscodingConfigMode
  @ffi.Int()
  external int mode;

  @ffi.Uint32()
  external int app_id;

  @ffi.Uint32()
  external int biz_id;

  @ffi.Uint32()
  external int video_width;

  @ffi.Uint32()
  external int video_height;

  @ffi.Uint32()
  external int video_bitrate;

  @ffi.Uint32()
  external int video_framerate;

  @ffi.Uint32()
  external int video_gop;

  @ffi.Uint32()
  external int background_color;

  external ffi.Pointer<ffi.Char> background_image;

  @ffi.Uint32()
  external int audio_sample_rate;

  @ffi.Uint32()
  external int audio_bitrate;

  @ffi.Uint32()
  external int audio_channels;

  @ffi.Uint32()
  external int audio_codec;

  external ffi.Pointer<trtc_mix_user_t> mix_users_array;

  @ffi.Uint32()
  external int mix_users_array_size;

  external ffi.Pointer<ffi.Char> stream_id;

  external ffi.Pointer<ffi.Char> video_sei_params;
}

// 5.14
class trtc_publish_cdn_param_t extends ffi.Struct {
  @ffi.Uint32()
  external int app_id;

  @ffi.Uint32()
  external int biz_id;

  external ffi.Pointer<ffi.Char> url;

  external ffi.Pointer<ffi.Char> stream_id;
}

// 5.16
class trtc_local_recording_params_t extends ffi.Struct {
  external ffi.Pointer<ffi.Char> file_path;
